# brainforge

./: Cargo.toml  README.md  test.b  test2.b  tmp-reference.s
docs/: jit-compilation.typ  loop-optimizations.typ  to-llvm.typ
src/: _architecture.rs  _error.rs  _input.rs  _io.rs  error.rs  lib.rs
src/assembly/: _instruction.rs  _operand.rs  mod.rs
src/assembly/amd64/: _amd64_instruction.rs  _amd64_operand.rs  _amd64_register.rs  _mod_rm.rs  _pack_byte.rs  _rex.rs  _sib.rs  _vex.rs  mod.rs
src/assembly/amd64/_amd64_instruction/: _amd64_instruction.rs  _encode_add.rs  _encode_and.rs  _encode_bsf.rs  _encode_bsr.rs  _encode_call.rs  _encode_cmovge.rs  _encode_cmp.rs  _encode_imul.rs  _encode_je.rs  mod.rs  (+17 more)
src/assembly/llvm/: _llvm_context.rs  _llvm_instruction.rs  mod.rs
src/generator/: _architecture.rs  _generator.rs  bf_prog.rs  main.rs  mod.rs  postamble.rs  preamble.rs
src/generator/aarch64/: _bf_prog.rs  _main.rs  _postamble.rs  _preamble.rs  mod.rs
src/generator/amd64/: _bf_prog.rs  _generate.rs  _generate_bf_prog.rs  _generate_instrs.rs  _generate_main.rs  _generate_postamble.rs  _generate_preamble.rs  _main.rs  _postamble.rs  _preamble.rs  mod.rs
src/generator/wasm/: _bf_prog.rs  _main.rs  _postamble.rs  _preamble.rs  mod.rs
src/instruction/: _basic_instruction.rs  _intermediate_instruction.rs  instruction.rs  mod.rs  tests.rs
src/interpreter/: interpret.rs  mod.rs  runtime_state.rs
src/jit/: _jit_mem.rs  _jit_program.rs  _make_program.rs  _program.rs  mod.rs
src/optimizer/: _coalesce.rs  _options.rs  _scans.rs  _simple_loops.rs  mod.rs
