[package]
name = "brainforge"
description = "A compiler for the Brainfuck language"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = [ "Cayden Lund (cayden.lund@utah.edu)" ]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.100"

[[bin]]
name = "bf-interp"
path = "src/bin/bf-interp.rs"

[[bin]]
name = "bf-jit"
path = "src/bin/bf-jit.rs"

[[bin]]
name = "bfc"
path = "src/bin/bfc.rs"
